添加内存参数设置